# Standalone-Server

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  asio_compatibility.hpp  build.zig  build.zig.zon  client_http.hpp  client_https.hpp  crypto.hpp  http_examples.cpp  https_examples.cpp  server_http.hpp  server_https.hpp  utility.hpp
.github/workflows/: zig-builds.yml
docs/: dependency_install.md
doxygen/: Doxyfile
examples/: http_examples.cpp  http_hello.cpp  https_examples.cpp
include/: asio_compatibility.hpp  client_http.hpp  client_https.hpp  crypto.hpp  mutex.hpp  server_http.hpp  server_https.hpp  status_code.hpp  utility.hpp
paper/: paper.bib  paper.md
tests/: CMakeLists.txt  assert.hpp  check.hpp  crypto_test.cpp  io_test.cpp  parse_test.cpp  status_code_test.cpp
